[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3.68"
wasm-bindgen-futures = "0.4.41"
paste = "1.0.14"
image = "0.24.9"

component = { path = "../component" }
utils = { path = "../utils" }
webapp = { path = "../webapp" }
webgl = { path = "../webgl" }
ecs = { path = "../ecs" }
math = { path = "../math" }
phys = { path = "../phys" }

[dependencies.web-sys]
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlVertexArrayObject',
    'WebGl2RenderingContext',
    'WebGlProgram',
    'WebGlShader',
    'WebGlUniformLocation',
    'WebGlBuffer',
    'WebGlTexture',
    'Window',
    'MouseEvent',
    'MouseScrollEvent',
    'KeyboardEvent',
    'console',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Performance',
]
