[package]
name = "aircraft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
math = { path = "../../crates/math" }
webapp = { path = "../../crates/webapp" }
webgl = { path = "../../crates/webgl" }
component = { path = "../../crates/component" }
ecs = { path = "../../crates/ecs" }
engine = { path = "../../crates/engine" }
utils = { path = "../../crates/utils" }
loader = { path = "../../crates/loader" }
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
paste = "1.0.14"
image = "0.24.9"
